# fast-jsonl

./: CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: pytest.yml
docs/source/: conf.py  index.rst
docs/source/api/: fast_jsonl.cache.rst  fast_jsonl.constants.rst  fast_jsonl.lock.rst  fast_jsonl.reader.rst  main.rst
docs/source/guide/: main.rst
docs/source/releases/: main.rst  v0.1.0.rst
src/fast_jsonl/: __init__.py  cache.py  cli.py  constants.py  lock.py  reader.py
tests/: conftest.py  data.py  test_cache.py  test_lock.py  test_reader.py  utils.py
